Starting with different storage engines in the same dbpath should error/warn

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.6.6, 2.8.0-rc2
    • Affects Version/s: 2.8.0-rc0
    • Component/s: Storage, Usability
    • None
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      If no error is generated then it is easy to accidentally change the storage option and think your data has disappeared, or have extra and unused files.

      This can be done by storing a metadata file about what storage engine was used to create the persistent storage so that we can detect if an attempt is used to use a different storage engine after that.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Scott Hernandez (Inactive)
            Votes:
            2 Vote for this issue
            Watchers:
            14 Start watching this issue

              Created:
              Updated:
              Resolved: