SERVER-15986 added storage_engine_metadata - reads and writes storage engine metadata file in data directory

(cherry picked from commit a932b12ac03366e9336ffc92e7710ddb5c3b3a39)